syntax = "proto3";

package assignment;

service AssignmentService {
  rpc getAllUserFromProject(getAllUserFromProjectRequest) returns (getAllUserFromProjectResponse);
  rpc GetAllUserInProjects(getAllUserInProjectsRequest) returns (getAllUserInProjectsResponse);
}

message getAllUserFromProjectRequest{
  string project_id = 1;
}

message getAllUserFromProjectResponse{
  repeated string ids = 1;

}

message getAllUserInProjectsRequest {
  string project_id = 1;
}

message getAllUserInProjectsResponse {
  repeated string ids = 1;
}
